@@ -1,15 +1,15 @@
 package com.clinica.sistema.Controller;
 
-import com.clinica.sistema.Entity.ServicioEntity;
-import com.clinica.sistema.Repository.UsuarioRepository;
-import com.clinica.sistema.Repository.ServicioRepository;
-import com.clinica.sistema.Repository.CitaRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
+
+import com.clinica.sistema.Repository.CitaRepository;
+import com.clinica.sistema.Repository.ServicioRepository;
+import com.clinica.sistema.Repository.UsuarioRepository;
+
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 @Controller
@@ -41,35 +41,20 @@ public class MainController {
             stats.put("citas", totalCitas);
             
             // Obtener servicios para mostrar
-            List<ServicioEntity> servicios = servicioRepository.findAll();
-            model.addAttribute("servicios", servicios);
+            model.addAttribute("servicios", servicioRepository.findAll());
             
         } catch (Exception e) {
-            // Si hay error (tablas vacías), usar datos de ejemplo
+            // Si hay error, usar datos de ejemplo
             stats.put("pacientes", 156);
             stats.put("profesionales", 23);
             stats.put("servicios", 8);
             stats.put("citas", 489);
             
-            // Crear servicios de ejemplo
-            List<ServicioEntity> serviciosEjemplo = List.of(
-                crearServicioEjemplo("Consulta General", "Atención médica general", 50000.0),
-                crearServicioEjemplo("Odontología", "Limpieza y tratamiento dental", 80000.0),
-                crearServicioEjemplo("Oftalmología", "Exámenes de la vista", 75000.0)
-            );
-            model.addAttribute("servicios", serviciosEjemplo);
+            // Solo pasar lista vacía de servicios
+            model.addAttribute("servicios", java.util.Collections.emptyList());
         }
         
         model.addAttribute("stats", stats);
         return "index";
-    }
-    
-    private ServicioEntity crearServicioEjemplo(String nombre, String descripcion, Double precio) {
-        ServicioEntity servicio = new ServicioEntity();
-        servicio.setNombre(nombre);
-        servicio.setDescripcion(descripcion);
-        servicio.setPrecio(precio);
-        servicio.setDuracion("30 minutos");
-        return servicio;
     }
 }
